     column named 'somename' to the attribute '_somename'. See the example
     in the mapper docs. [ticket:801]

   - added support for version_id_col in conjunction with inheriting mappers.
     version_id_col is typically set on the base mapper in an inheritance
     relationship where it takes effect for all inheriting mappers. 
     [ticket:883]
     
   - several ORM attributes have been removed or made private:
     mapper.get_attr_by_column(), mapper.set_attr_by_column(), 
     mapper.pks_by_table, mapper.cascade_callable(), 
     MapperProperty.cascade_callable(), mapper.canload(),
     mapper._mapper_registry, attributes.AttributeManager
     
   - fixed endless loop issue when using lazy="dynamic" on both 
     sides of a bi-directional relationship [ticket:872]

   - fix to self-referential eager loading such that if the same mapped
     instance appears in two or more distinct sets of columns in the same
     result set, its eagerly loaded collection will be populated regardless
     of whether or not all of the rows contain a set of "eager" columns for
     that collection.  this would also show up as a KeyError when fetching
     results with join_depth turned on.
     
   - fixed bug where Query would not apply a subquery to the SQL when LIMIT
     was used in conjunction with an inheriting mapper where the eager 
     loader was only in the parent mapper.
     
   - clarified the error message which occurs when you try to update()
     an instance with the same identity key as an instance already present
     in the session.

   - some clarifications and fixes to merge(instance, dont_load=True).  
     fixed bug where lazy loaders were getting disabled on returned instances.
     Also, we currently do not support merging an instance which has uncommitted
     changes on it, in the case that dont_load=True is used....this will
     now raise an error.  This is due to complexities in merging the 