@@ -948,18 +948,18 @@ class ExternalColumnsTest(QueryTest):
         clear_mappers()
         try:
             mapper(User, users, properties={
-                'concat': column_property(users.c.id * 2),
+                'count': column_property(select([func.count(addresses.c.id)], users.c.id==addresses.c.user_id).correlate(users))
             })
         except exceptions.ArgumentError, e:
-            assert str(e) == 'ColumnProperties must be named for the mapper to work with them.  Try .label() to fix this'
+            assert str(e) == 'column_property() must be given a ColumnElement as its argument.  Try .label() or .as_scalar() for Selectables to fix this.'
         else:
             raise 'expected ArgumentError'
 
     def test_external_columns_good(self):
         """test querying mappings that reference external columns or selectables."""
         mapper(User, users, properties={
-            'concat': column_property((users.c.id * 2).label('concat')),
-            'count': column_property(select([func.count(addresses.c.id)], users.c.id==addresses.c.user_id).correlate(users).label('count'))
+            'concat': column_property((users.c.id * 2)),
+            'count': column_property(select([func.count(addresses.c.id)], users.c.id==addresses.c.user_id).correlate(users).as_scalar())
         })
 
         mapper(Address, addresses, properties={
