@@ -33,6 +33,11 @@ CHANGES
      version_id_col is typically set on the base mapper in an inheritance
      relationship where it takes effect for all inheriting mappers. 
      [ticket:883]
+   
+   - relaxed rules on column_property() expressions having labels; any
+     ColumnElement is accepted now, as the compiler auto-labels non-labeled
+     ColumnElements now.  a selectable, like a select() statement, still
+     requires conversion to ColumnElement via as_scalar() or label().
      
    - several ORM attributes have been removed or made private:
      mapper.get_attr_by_column(), mapper.set_attr_by_column(), 
